<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/its_logo" />

        <TextView
            android:id="@+id/loginAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#e62608" />

        <EditText
            android:id="@+id/usernameLogin"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_blue_border"
            android:hint="@string/enter_email"
            android:paddingEnd="10dp"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/passwordLogin"
            android:layout_width="290dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_blue_border"
            android:hint="@string/enter_password"
            android:paddingEnd="10dp"
            android:paddingStart="10dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/blue_back"
            android:onClick="login"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/login"
            android:textColor="#FFFF" />


        <TextView
            android:id="@+id/troubleLogin"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/trouble_with_login"
            android:textColor="#000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/guestLoginButton"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/blue_back"
            android:onClick="guestLogin"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/guest_login"
            android:textColor="#FFFF" />
    </LinearLayout>
</ScrollView>
